Implemented feature to display seats with adjancent empty seats